--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,15 @@
 </head>
 
 <body>
-
+    <div class="container-menu">
+        <ul>
+            <li><a href="./panier.html">Panier</a></li>
+        </ul>
+    </div>
     <h1>Ours en peluche</h1>
     <ul id="results"></ul>
-    
 </body>
 
 
-<script src="index.js" defer></script>
+<script src="./js/index.js" defer></script>
 </html>
