--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
-
+    <div class="container-menu">
+        <ul>
+            <li><a href="./index.html">Acceuil</a></li>
+            <li><a href="./panier.html">Panier</a></li>
+        </ul>
+    </div>
     <h1>Page produit</h1>
-        <div class="container-product">
-            
-        </div>
-
-    
+    <div id="container-product">    
+    </div>
 </body>
 
 
-<script src="product.js" defer></script>
+<script src="./js/produit.js" defer></script>
 </html>
