--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,23 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Orinoco</title>
+
+    <title>Orinoco - Ours en peluche</title>
+
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    
 </head>
 
 <body>
-    <div class="container-menu">
-        <ul>
-            <li><a href="./panier.html">Panier</a></li>
-        </ul>
-    </div>
-    <h1>Ours en peluche</h1>
-    <ul id="results"></ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="panier.html">Panier</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="masthead text-center text-white">
+      <div class="masthead-content">
+        <div class="container">
+          <h1 class="mb-0 title">Orinoco</h1>
+          <h2 class="mb-0 sub-title">Ours en peluche faits à la main</h2>
+        </div>
+      </div>
+      <div class="scroll">
+        <a href="#container-teddies">
+          <i class="far fa-arrow-alt-circle-down"></i>
+        </a>
+      </div>
+    </header>
+
+    <!-- Section -->
+    <section>
+        <div class="container" id="container-teddies">
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-3 container-copy">
+        <div class="container">
+        <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
+        </div>
+    </footer>
 </body>
 
 
 <script src="./js/index.js" defer></script>
+<script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
