correction prob menu burger

--- a/frontend/commande.html
+++ b/frontend/commande.html
@@ -56,6 +56,7 @@
 
 
 <script src="./js/commande.js" defer></script>
+<script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
