--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -83,6 +83,7 @@
 
 
 <script src="./js/panier.js" defer></script>
+<script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
