--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -24,12 +24,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Acceuil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="panier.html">Panier</a>
-                </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Acceuil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="panier.html">Panier</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -48,6 +48,7 @@
 
 
 <script src="./js/produit.js" defer></script>
+<script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
