modif (mast)head(er) + style product page

--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -35,6 +35,15 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header class="masthead text-center text-white">
+      <div class="masthead-content">
+        <div class="container">
+          <h1 class="mb-0 title">Produit</h1>
+        </div>
+      </div>
+    </header>
+
     <!-- Section -->
     <div id="container-product"></div>
 
