--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -43,7 +43,7 @@
 
     <!-- Section -->
     <div class="container p-4 p-sm-0 container-product-panier">
-      <div class="row container-shop-table">
+      <div class="row mb-2 container-shop-table">
         <h2 class="col-4 product">Produit</h2>
         <h2 class="col-4 color">Couleur</h2>
         <h2 class="col-4 price">Prix</h2>
