commande + modifs panier/product page

--- a/frontend/commande.html
+++ b/frontend/commande.html
@@ -35,14 +35,23 @@
         </div>
     </nav>
 
-    <!-- Section -->
-    <div class="container-order">
-        <p id="name"></p>
-        <div class="orderId" >Numéro :
-            <span id="orderId"></span>
+    <!-- Header -->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container">
+            <h1 class="mb-0 title">Ma commande</h1>
+            </div>
         </div>
-        <div class="totalPrice" >Total :
-            <span id="totalPrice"></span>
+    </header>
+
+    <!-- Section -->
+    <div class="container mt-5 px-5 px-sm-0 container-order">
+        <p id="name" class="mb-4"></p>
+        <div class="orderId">Numéro
+            <p id="orderId"></p>
+        </div>
+        <div class="totalPrice">Total
+            <p id="totalPrice"></p>
         </div>
     </div>
 
