--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -34,15 +34,15 @@
 
     <!-- Header -->
     <header class="masthead text-center text-white">
-        <div class="masthead-content">
-          <div class="container">
-            <h1 class="mb-0 title">Panier</h1>
-          </div>
+      <div class="masthead-content">
+        <div class="container">
+          <h1 class="mb-0 title">Mon panier</h1>
         </div>
-      </header>
+      </div>
+    </header>
 
     <!-- Section -->
-    <div class="container p-4 p-sm-0 container-product-panier">
+    <div class="container p-4 p-md-4 p-lg-0 container-product-panier">
       <div class="row mb-2 container-shop-table">
         <h2 class="col-4 product">Produit</h2>
         <h2 class="col-4 color">Couleur</h2>
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Form -->
-    <div class="container p-4 p-sm-0 order-form">
+    <div class="container p-4 p-md-4 p-lg-0 order-form">
       <div class="row">
         <div class="col-12 col-md-9 col-lg-7">
           <h3 class="title-form">Formulaire</h3>
