modal + meta keywords & description

--- a/frontend/commande.html
+++ b/frontend/commande.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="keywords" content="orinoco, e-commerce, site web, ours en peluche, faits à la main, france">
 
-    <title>Orinoco - Ours en peluche</title>
+    <title>Commande | Orinoco</title>
 
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
