--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="keywords" content="orinoco, e-commerce, site web, ours en peluche, faits à la main, france">
+    <meta name="description" content="Découvrez nos ours en peluche faits à la main en France"/>
 
-    <title>Orinoco - Ours en peluche</title>
-
+    <title>Orinoco | Ours en peluche</title>
+    
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
