--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="keywords" content="orinoco, e-commerce, site web, ours en peluche, faits à la main, france">
+  <meta name="description" content="Produit, détails de l'ours en peluche."/>
 
-    <title>Orinoco - Ours en peluche</title>
+  <title>Produit | Orinoco</title>
 
-    <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
+  rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 
 <body>
@@ -46,6 +48,25 @@
 
     <!-- Section -->
     <div id="container-product"></div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalPanier" tabindex="-1" role="dialog" aria-labelledby="modalPanierTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="modalPanierTitle">Hop !</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">X</span>
+                  </button>
+              </div>
+              <div id="modal-body"></div>
+              <div class="modal-footer">
+                  <button type="button" class="button" data-dismiss="modal">Continuez mes achats</button>
+                  <a href="./panier.html"><button type="button" class="button button-panier">Voir mon panier</button></a>
+              </div>
+          </div>
+      </div>
+  </div>
 
     <!-- Footer -->
     <footer class="py-3 container-copy">
