--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,12 +16,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -35,11 +35,11 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white">
+    <header class="masthead text-center text-white" role="heading">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="mb-0 title">Orinoco</h1>
-          <h2 class="mb-0 sub-title">Ours en peluche faits à la main</h2>
+          <h1 class="mb-0 title-page">Orinoco</h1>
+          <h2 class="mb-0 sub-title slogan">Ours en peluche faits à la main</h2>
         </div>
       </div>
       <div class="scroll">
@@ -50,13 +50,13 @@
     </header>
 
     <!-- Section -->
-    <section>
+    <section role="section">
         <div class="container" id="container-teddies">
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy">
+    <footer class="py-3 container-copy" role="footer">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
