--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -15,12 +15,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,16 +34,16 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white">
+    <header class="masthead text-center text-white" role="heading">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="mb-0 title">Mon panier</h1>
+          <h1 class="mb-0 title-page">Panier</h1>
         </div>
       </div>
     </header>
 
     <!-- Section -->
-    <div class="container p-4 p-md-4 p-lg-0 container-product-panier">
+    <div class="container p-4 p-md-4 p-lg-0 container-product-panier" role="section">
       <div class="row mb-2 container-shop-table">
         <h2 class="col-4 product">Produit</h2>
         <h2 class="col-4 color">Couleur</h2>
@@ -59,10 +59,10 @@
     </div>
 
     <!-- Form -->
-    <div class="container p-4 p-md-4 p-lg-0 order-form">
+    <div class="container p-4 p-md-4 p-lg-0 order-form" role="form">
       <div class="row">
         <div class="col-12 col-md-9 col-lg-7">
-          <h3 class="title-form">Formulaire</h3>
+          <h2 class="title-form">Formulaire</h2>
         <p class="subtitle-form">Remplissez ce formulaire pour finaliser la commande.</p>
         <div method="POST" class="mt-3">
           <div class="row">
@@ -96,7 +96,7 @@
               <input type="text" id="email" class="mb-4 px-3" name="email" required> 
             </div>
           </div>
-            <button id="sendForm" class="button" name="sendForm">Envoyer</button>
+            <button id="sendForm" class="button" name="sendForm" role="button">Envoyer</button>
         </div>
         </div>
         <div class="col-12 col-md-3 col-lg-5"></div>
@@ -104,7 +104,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy">
+    <footer class="py-3 container-copy" role="footer">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
