correctif W3C error + undefined + form

--- a/frontend/commande.html
+++ b/frontend/commande.html
@@ -15,12 +15,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white" role="heading">
+    <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
             <h1 class="mb-0 title-page">Commande</h1>
@@ -43,27 +43,27 @@
     </header>
 
     <!-- Section -->
-    <div class="container p-4 p-md-4 p-lg-0 container-order" role="section">
+    <div class="container p-4 p-md-4 p-lg-0 container-order">
         <p id="name" class="mb-4"></p>
-        <h2 class="orderId">Numéro
+        <div class="orderId">Numéro
             <p id="orderId"></p>
-        </h2>
-        <h2 class="totalPrice">Total
+        </div>
+        <div class="totalPrice">Total
             <p id="totalPrice"></p>
-        </h2>
+        </div>
     </div>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy" role="footer">
+    <footer class="py-3 container-copy">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
     </footer>
-</body>
 
 
 <script src="./js/commande.js" defer></script>
 <script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>    
+</body>
 </html>
