--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,12 +16,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -35,7 +35,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white" role="heading">
+    <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
           <h1 class="mb-0 title-page">Orinoco</h1>
@@ -49,23 +49,21 @@
       </div>
     </header>
 
-    <!-- Section -->
-    <section role="section">
-        <div class="container" id="container-teddies">
-        </div>
-    </section>
+    <!-- Container -->
+    <div class="container" id="container-teddies">
+    </div>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy" role="footer">
+    <footer class="py-3 container-copy">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
     </footer>
-</body>
 
 
 <script src="./js/index.js" defer></script>
 <script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>    
+</body>
 </html>
