--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -15,12 +15,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white" role="heading">
+    <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
           <h1 class="mb-0 title-page">Panier</h1>
@@ -43,7 +43,7 @@
     </header>
 
     <!-- Section -->
-    <div class="container p-4 p-md-4 p-lg-0 container-product-panier" role="section">
+    <div class="container p-4 p-md-4 p-lg-0 container-product-panier">
       <div class="row mb-2 container-shop-table">
         <h2 class="col-4 product">Produit</h2>
         <h2 class="col-4 color">Couleur</h2>
@@ -106,7 +106,7 @@
                 <input type="text" class="mb-4 px-3" id="email" name="email" required>
               </div>
             </div>
-              <button id="sendForm" class="button" name="sendForm" role="button">Envoyer</button>
+              <button id="sendForm" class="button" name="sendForm">Envoyer</button>
           </form>
         </div>
         <div class="col-12 col-md-3 col-lg-5"></div>
@@ -114,16 +114,16 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy" role="footer">
+    <footer class="py-3 container-copy">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
     </footer>
-</body>
 
-
+    
 <script src="./js/panier.js" defer></script>
 <script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>    
+</body>
 </html>
