--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -16,12 +16,12 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo.jpg" alt="logo orinoco" class="my-2 logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" role="button">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead text-center text-white" role="heading">
+    <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
           <h1 class="mb-0 title-page">Produit</h1>
@@ -47,7 +47,7 @@
     </header>
 
     <!-- Section -->
-    <div id="container-product" role="section"></div>
+    <div id="container-product"></div>
 
     <!-- Modal -->
     <div class="modal fade" id="modalPanier" tabindex="-1" role="dialog" aria-labelledby="modalPanierTitle" aria-hidden="true">
@@ -55,30 +55,29 @@
           <div class="modal-content">
               <div class="modal-header">
                   <div class="modal-title" id="modalPanierTitle">Hop !</div>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" role="button">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">X</span>
                   </button>
               </div>
               <div id="modal-body"></div>
               <div class="modal-footer">
-                  <button type="button" class="button" data-dismiss="modal" role="button">Continuez mes achats</button>
-                  <a href="./panier.html"><button type="button" class="button button-panier" role="button">Voir mon panier</button></a>
+                  <button type="button" class="button" data-dismiss="modal">Continuez mes achats</button>
+                  <a href="./panier.html"><div class="button button-panier">Voir mon panier</div></a>
               </div>
           </div>
       </div>
   </div>
 
     <!-- Footer -->
-    <footer class="py-3 container-copy" role="footer">
+    <footer class="py-3 container-copy">
         <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; Orinoco 2021</p>
         </div>
     </footer>
-</body>
-
 
 <script src="./js/produit.js" defer></script>
 <script src="https://kit.fontawesome.com/7ee6dfe60d.js" crossorigin="anonymous"></script>
 <script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>    
+</body>
 </html>
